# gomoku-cpp

./: .gitignore  BitRowBuilder.cpp  BitRowBuilder.h  Board.cpp  Board.h  CMakeLists.txt  Gomoku.cpp  Gomoku.h  GomokuDriver.cpp  GomokuServer.cpp  README.md  RowEvaluator.cpp  RowEvaluator.h  TTEntry.h  pattern.txt  pattern_dump1.txt  pattern_dump2.txt
